test/tests/errors/error-if-exp-ref-off8.sm
// true
// false
// false
/**/
/**/

program {
    const x: int = true ? ref 1 : "";
}